# cpp_rapic

./: .clang-format  .gitignore  CMakeLists.txt
.github/workflows/: pull-request.yml
include/rapic/: execution_context.hpp  http_rest_client.hpp  https_rest_client.hpp  request.hpp  response.hpp  rest_api_client.hpp  rest_client.hpp  thread_pool_context.hpp
src/rapic/: boost_impl.cpp  http_request_task.cpp  http_request_task.hpp  http_rest_client.cpp  http_rest_client_impl.cpp  http_rest_client_impl.hpp  https_request_task.cpp  https_request_task.hpp  https_rest_client.cpp  https_rest_client_impl.cpp  https_rest_client_impl.hpp  logger.cpp  logger.hpp  request_task_producer.cpp  request_task_producer.hpp  rest_api_client.cpp  ssl_stream.cpp  ssl_stream.hpp  stream.hpp  tcp_stream.cpp  tcp_stream.hpp  thread_pool_context.cpp  thread_pool_context_impl.cpp  thread_pool_context_impl.hpp
tests/: CMakeLists.txt
tests/component/: CMakeLists.txt  base.cpp  environment_holder.hpp  http_environment_holder.cpp  http_environment_holder.hpp  http_rest_client_base_test.cpp  https_environment_holder.cpp  https_environment_holder.hpp  https_rest_client_base_test.cpp  https_rest_client_fake_server_base_test.cpp  https_rest_client_fake_server_base_test.hpp  https_rest_client_request_test.cpp  rest_client_fake_server_base_test.cpp  rest_client_fake_server_base_test.hpp  rest_clients_request_test.cpp
tests/resources/: certificate.crt  privatekey.key
tests/unit/: CMakeLists.txt  base.cpp  thread_pool_context_test.cpp
tests/utils/: CMakeLists.txt
tests/utils/include/rapic/tests/utils/: http_rest_server.hpp  https_rest_server.hpp  logger.hpp  rest_server.hpp  synced_execution_context.hpp  test_execution_context.hpp  thread_pool_execution_context.hpp
tests/utils/src/: http_rest_server.cpp  https_rest_server.cpp  logger.cpp  synced_execution_context.cpp  thread_pool_execution_context.cpp
